overflow fix

--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@ ul{
 /* {
     white-space: pre-wrap;
 } */
- *{
-    overflow: scroll;
- }
 p {
     width: clamp(min(45ch,100%), 50%, 75ch);
 }
@@ -85,6 +82,7 @@ li{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(410px,100%), 1fr));
     padding-bottom: 1.5rem;
+    overflow: scroll;
 }
 .top h1{
     font-size: 90px;
